# public/swagger.json
@@ -7,6 +7,13 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"UserRole": {
+				"enum": [
+					"ADMIN",
+					"USER"
+				],
+				"type": "string"
+			},
 			"MediaType": {
 				"enum": [
 					"USER_PROFILE",
@@ -29,6 +36,10 @@
 						"type": "string",
 						"format": "date-time"
 					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
 					"name": {
 						"type": "string"
 					},
@@ -43,9 +54,129 @@
 					"id",
 					"createdAt",
 					"deletedAt",
+					"updatedAt",
 					"name",
 					"mimeType",
 					"mediaType"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"User": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"deletedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"fullName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"isVerified": {
+						"type": "boolean"
+					},
+					"role": {
+						"$ref": "#/components/schemas/UserRole"
+					},
+					"profile": {
+						"$ref": "#/components/schemas/Media"
+					}
+				},
+				"required": [
+					"id",
+					"createdAt",
+					"deletedAt",
+					"updatedAt",
+					"fullName",
+					"email",
+					"password",
+					"isVerified",
+					"role",
+					"profile"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"RegisterUserValidation": {
+				"properties": {
+					"fullName": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					},
+					"role": {
+						"$ref": "#/components/schemas/UserRole"
+					}
+				},
+				"required": [
+					"fullName",
+					"email",
+					"password",
+					"role"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"InitializePasswordResetValidator": {
+				"properties": {
+					"email": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"FinalizePasswordResetValidator": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"newPassword": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"newPassword"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LoginValidator": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"password"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -83,6 +214,226 @@
 				],
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/auth/register-user": {
+			"post": {
+				"operationId": "RegisterUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/User"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RegisterUserValidation"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/email-verification/{userId}/{token}": {
+			"get": {
+				"operationId": "EmailVerification",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
+						"name": "token",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/auth/forgot-password": {
+			"post": {
+				"operationId": "ForgotPassword",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/InitializePasswordResetValidator"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/finalize-forgot-password/{token}": {
+			"post": {
+				"operationId": "FinalizePasswordReset",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "token",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/FinalizePasswordResetValidator"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/auth/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"refreshToken": {},
+										"accessToken": {},
+										"isVerified": {
+											"type": "boolean",
+											"enum": [
+												true
+											],
+											"nullable": false
+										},
+										"id": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"refreshToken",
+										"accessToken",
+										"isVerified",
+										"id"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Authentication"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/LoginValidator"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/media": {
@@ -149,11 +500,7 @@
 	},
 	"servers": [
 		{
-			"url": "https://abc.com/api/v1",
-			"description": "prouduction server"
-		},
-		{
-			"url": "http://localhost:4000/api/v1",
+			"url": "http://localhost:4000",
 			"description": "Development server"
 		}
 	]
